<resources>
    <string name="app_name">Fahrgemeinschaft</string>
    <string name="gcm_send_message">Token retrieved and sent to server! You can now use gcmsender to
        send downstream messages to this repositoryCollection.</string>
    <string name="registering_message">Generating InstanceID token...</string>
    <string name="token_error_message">An error occurred while either fetching the InstanceID token,
        sending the fetched token to the server or subscribing to the PubSub topic. Please try
        running the sample again.</string>
    <string name="grpname">"Gruppenname: %1$s "</string>
    <string name="membercount">"Mitgliederanzahl: %1$s "</string>
    <string name="grpadmin">"Gruppenadmin: %1$s"</string>
    <string name="apm_name">database.Appointment: %1$s</string>
    <string name="treffpunkt_zeit">Treffen %1$s</string>
    <string name="treffpunkt_ort">Treffen %1$s</string>
    <string name="addgroup">Gruppe hinzufügen</string>
    <string name="google_mail">google-mail</string>
    <string name="passwort_vergessen">Passwort vergessen?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="weiter">Weiter</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>


    <!-- Die Strings aus dem Tutorial-->
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>
    <string name="desc_logo_auto">Fahrgemeinschaft Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="taskName">To Do: %1$s</string>
    <string name="taskDescr">Aufgabenbeschreibung: %1$s</string>
    <string name="taskBearbeiter">Bearbeiter: %1$s</string>
    <string name="inv_status">Angenommen</string>

    <string-array name="sitzAnzahl_array">
        <item>1</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gruppen_einladung_annehmen">Möchten Sie die Einladung in die Gruppe annehmen?</string>
    <string name="ja">Ja</string>
    <string name="nein">Nein</string>
    <string name="not_enough_driver">Nicht genug Fahrer!</string>

</resources>
