<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Primary"
    android:orientation="vertical"
    android:weightSum="4"
    android:fitsSystemWindows="true"
    tools:context=".SignInActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:weightSum="1"
        android:background="@color/blue_grey_500">


        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/app_name"
            android:gravity="center"
            android:textColor="@color/material_blue_grey_900"
            android:textSize="36sp"
            android:layout_marginTop="30dp" />

        <TextView
            android:id="@+id/detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:gravity="center"
            android:maxLines="5"
            android:padding="10dp"
            android:scrollbars="vertical"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/logo_auto"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginBottom="10dp"
            android:contentDescription="@string/desc_logo_auto"
            android:src="@drawable/logo_auto"
            android:layout_weight="0.32"
            android:layout_marginTop="25dp" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signed_out"
            android:textColor="@color/material_blue_grey_900"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/blue_grey_500">

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            tools:visibility="gone" />

        <LinearLayout
            android:id="@+id/sign_out_and_disconnect"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerInParent="true"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            tools:visibility="visible"
            android:weightSum="1"
            android:background="@color/blue_grey_500">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/sign_out_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="12dp"
                android:padding="12dp"
                android:text="@string/sign_out"
                android:background="@color/PrimaryDark"
                android:textColor="@color/blue_grey_900" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/disconnect_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="-10dp"
                android:padding="12dp"
                android:text="@string/disconnect"
                android:background="@color/PrimaryDark"
                android:textColor="@color/blue_grey_900" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>